# vizag-resort-booking

./: .dockerignore  .env.chat  .env.example  .gitignore  API_DOCUMENTATION.md  AWS_DEPLOYMENT.md  BOOKING_ID_QR_IMPLEMENTATION.md  COMPLETE_ANALYSIS.txt  COMPLETE_DEPLOYMENT_GUIDE.md  DEPLOYMENT-GUIDE.md  DEPLOY_WINSTON.md  Dockerfile  Dockerfile.admin  Dockerfile.booking  Dockerfile.centralized-db  Dockerfile.database  Dockerfile.gateway  Dockerfile.main  Dockerfile.websocket  EVENTBRIDGE_FIX.md  FINAL_SECURITY_REPORT.md  FIREBASE_SETUP.md  FOOD_ORDER_FIXES.md  INTERIOR_DEPLOYMENT.md  MOBILE_SETUP.md  MYSQL_SETUP.md  PAYMENT_INTEGRATION.md  README-DEPLOYMENT.md  README.md  SECURITY_FIXES.md  SSH_TROUBLESHOOTING.md  TELEGRAM_SETUP.md  WINSTON_LOGGING.md  add_qr_columns.js  admin-server-fixed.js  admin-server-new.js  admin-server-old.js  admin-server.js  agent_service.py  ai-chat-service.js  (+121 more)
admin-public/: dashboard.css  index.html  script-fixed.js  script.js  simple.html  (+2 more)
chat-system/: Dockerfile  agent_backend.py  conversation_state.py  dashboard.py  dashboard_backup.py  dashboard_complex.py  dashboard_new.py  dashboard_redis.py  dashboard_redis_new.py  dashboard_simple.py  docker-compose.yml  human_dashboard.html  main.py  main_backup.py  main_keey.py  main_mcp.py  main_new.py  main_old.py  mcp_client.py  pyproject.toml  requirements.txt  run.py  run_fixed.py  run_mcp.py  start_chat.py
chat-system/mcp_server/: server.py  server_fixed.py  server_working.py
chat-system/static/: agent.js  chat-widget.js  dashboard.html
chat-system/templates/: chat-widget.html
(+235 files in other folders)
