[project]
name = "vizag-mcp-server"
version = "0.1.0"
description = "MCP Server for Vizag Resort Booking (Keey)"
requires-python = ">=3.9"

[project.scripts]
vizag-mcp-server = "mcp_server.server:main"

# 👇 THIS IS THE IMPORTANT PART
[tool.setuptools]
packages = ["mcp_server"]

[tool.mcp.server]
transport = "stdio"

